# tardis_em_analysis

./: .gitignore  LICENSE  requirements.txt  setup.cfg
notebooks/: stitching.ipynb
tardis_em_analysis/: _version.py  geometry_metrics.py
tardis_em_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tardis_em_analysis/stitch_volume/: align_tomograms.py
tardis_em_analysis/stitch_volume/mt_aligner/: __init__.py  endpoints.py  matching.py  mt_aligner.py  transform.py
