#######################################################################
#  TARDIS - Transformer And Rapid Dimensionless Instance Segmentation #
#                                                                     #
#  New York Structural Biology Center                                 #
#  Simons Machine Learning Center                                     #
#                                                                     #
#  Robert Kiewisz, Tristan Bepler                                     #
#  MIT License 2021 - 2025                                            #
#######################################################################
[metadata]
name = tardis_em_analysis
description = Collection of analysis libraries used by TARDIS-EM and napari-tardis-em.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = tardis-em, analysis, filaments, membranes
url = https://github.com/SMLC-NYSBC/tardis-analysis
author = Robert Kiewisz, Tristan Bepler
author_email = robert.kiewisz@gmail.com, rkiewisz@nysbc.org, tbepler@nysbc.org
license = MIT
license_files = LICENSE
version = attr:tardis_em_analysis.__version__
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA :: 11
    Natural Language :: English
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10,!=3.12
include_package_data = True
install_requires = file: requirements.txt

[flake8]
max-line-length=100
